--- a/style.scss
+++ b/style.scss
@@ -349,6 +349,7 @@ tbody tr:nth-child(odd) th {
 
 .list {
   &-post-title {
+    margin-top: 1rem;
     margin-bottom: .25rem;
 
     a {
@@ -361,7 +362,6 @@ tbody tr:nth-child(odd) th {
     }
   }
   &-post-date {
-    margin-bottom: 1rem;
     font-size: .75rem;
     text-transform: uppercase;
   }
