--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <div class="content post h-entry">
-	<h1 class="home-title">{{ page.title }}</h1>
   <div class="post-date">
-    <time class="dt-published" datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
+    <time class="dt-published" datetime="{{ page.date }}">{{ page.date | date: "%Y/%m/%d" }}</time>
   </div>
+  <h1 class="home-title">{{ page.title }}</h1>
   <div class="e-content">
   {{ content }}
   </div>
