--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,20 +6,15 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600">
   <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/custom.css">
-
-	<link rel="shortcut icon" href="/{{ site.username }}/favicon.png" type="image/x-icon" />
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-  <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
-  <link rel="EditURI" type="application/rsd+xml" href="{{ site.baseurl }}/rsd.xml" />
-  <link rel="me" href="https://twitter.com/{{ site.twitter_username }}" />
+  <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
   <link rel="me" href="https://github.com/{{ site.github_username }}" />
+  {% seo %}
 </head>
 <body>
   <div class="container">
   <header class="masthead">
     <h1 class="masthead-title">
-      <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+      <a href="{{ site.baseurl }}/">{{ site.name }}<span>&#39;s blog</span></a>
     </h1>
     <nav class="masthead-nav">
   {% assign sorted_pages = site.pages | sort: "order" %}
