--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 <div class="content page">
-  <h1 class="home-title">{{ page.title }}</h1>
+  <h2 class="page-title">{{ page.title }}</h2>
   {{ content }}
 </div>
