--- a/style.scss
+++ b/style.scss
@@ -239,7 +239,8 @@ pre code {
 img {
   display: block;
   max-width: 100%;
-  margin: 0 0 1rem;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 5px;
 }
 
