--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
   <link rel="me" href="https://github.com/{{ site.github_username }}" />
   {% seo %}
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101219559);</script>
+<script async src="//static.getclicky.com/js"></script>
 </head>
 <body>
   <div class="container">
